# aiodav

./: .gitignore  .travis.yml  LICENSE  README.md  README_NOTES.md  pyproject.toml  requirements.txt  setup.py  test_upload_fix.py
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml
aiodav/: __init__.py  client.py  exceptions.py  resource.py  urn.py  utils.py
